Add support for converting empty strings to primitives and primitive wrappers. Closes #129.